# gmerlin-control

./: .gitignore  Makefile.am  README  README.md  configure.ac  get_js_vars.sh
apps/: Makefile.am
apps/control/: Makefile.am  gmerlin-control.c
apps/controlcenter/: Makefile.am  controlcenter.c  controlcenter.h  curve.c  gmerlin-controlcenter.c
apps/controlpanel/: Makefile.am  gmerlin-controlpanel-ctl.c  gmerlin-controlpanel.c
include/: Makefile.am  bgctrl.h  config.h.in  control.h  mqtt.h  shellyrpc.h
lib/: Makefile.am  control.c  mqtt.c  shellyrpc.c
m4/: Makefile.am  lqt_opt_cflags.m4
plugins/: Makefile.am  ctrl_command.c  ctrl_energenie.c  ctrl_marantz.c  ctrl_pulse.c  ctrl_shellybulb_m.c  ctrl_shellyht.c  ctrl_shellyplug.c  ctrl_shellyplugplus.c  ctrl_sysinfo.c  ctrl_wireplumber.c  shellyplug.control  wireplumber_monitor.lua
tests/: Makefile.am  energenie.c  shellyplug.c
web/: Makefile.am  controlcenter.html  controlpanel.html
web/css/: Makefile.am  controlcenter.css  controlpanel.css
web/icons/: Makefile.am
web/js/: Makefile.am  control.js  controlcenter.js  controlpanel.js  vars.js
